apps/minio/helm-minio-operator.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: minio
    labels:
      infra.gitops: minio-operator
      prometheus: scrape
