apps/minio/minio-tenant-s3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-minio
    namespace: minio
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.org/ssl-services: minio
        nginx.org/client-max-body-size: 0m
        nginx.org/rewrites: serviceName=minio rewrite=/
        nginx.org/server-snippets: |
            chunked_transfer_encoding off;
spec:
    tls:
        - hosts:
            - ENC[AES256_GCM,data:toYRbCVFK+w864hm4RLJnVuqIfY=,iv:fyWRkSxnOjRDgW5H0QHJ2K0kAlusTNqg8OWAaTkvY40=,tag:IepdQQcf9RqUkMtGzAS13w==,type:str]
          secretName: minio-tenant-s3-cert
    rules:
        - host: ENC[AES256_GCM,data:sWubYLR3h2DuwDAWBt6xCSvIsoI=,iv:NUkb/xUvUIEUsRmEH71dHc1poH2WjdWKmLEiizpNfEI=,tag:AI0TSxZYFbdNLyhash3ElA==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: minio
                        port:
                            number: 443
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2021-09-03T20:42:00Z"
    mac: ENC[AES256_GCM,data:OLwio/WnUO+YseRAQmI4veKnyope/wxQcfgSYEAL/Sh4uFIrbGPCT1FgO/ntK0XUS8jPO7rsOjEgHvvIMrorX0C6NbNPGWqT8Ec9AVZ5EHm3mavIJjBzCdwRs8Wbgoc+fpS1S12MoK6521B1i/bC/rDQrY7bv88Gno86FZwqZ84=,iv:DVg+R6JHpxz7lzNjCKiDylbTcnIJTPi/DXuEpUdEMWw=,tag:JGRjfosUn0zHqtowMhmlZw==,type:str]
    pgp:
        - created_at: "2021-09-03T20:42:00Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMAwP8FxNnerN5AQ/9Hu9vl+EGz1DSYU4p8dLXlJ1yDQJSGbZ2/YXJXctl6uQN
[...]
            3nReMWJdU1ttPM25nv30i5w9IrocN3WrcHAb+ApgHRFk
            =8ZG1
            -----END PGP MESSAGE-----
          fp: FEE43962AC34E28FB078EFA9F6C9CFE02626638C
    encrypted_regex: ^(data|stringData|consumerKey|email|groupName|applicationKey|host|hosts|server|dnsNames)$
    version: 3.7.1
